ackground & header images

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,8 @@
     />   -->
       <!--Materialize CSS  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Courgette|Indie+Flower&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
