--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,8 @@
     />   -->
       <!--Materialize CSS  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <!-- Materialize Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Courgette|Indie+Flower&display=swap" rel="stylesheet">
     <title>React App</title>
